--- a/index.html
+++ b/index.html
@@ -72,5 +72,13 @@
             <h1 class="skill-name">PYTHON</h1>
             <p class="skill-info">Python is a high-level, general-purpose programming language known for its simplicity, readability, and versatility. </p>
         </div>
+        <div class="skill-card">
+            <img src="img/Figma.png" class="skill-img" alt="">
+            <div class="skill-level">98%</div>
+            <h1 class="skill-name">FIGMA</h1>
+            <p class="skill-info">Figma is a cloud-based vector graphics editor and prototyping tool primarily used for designing user interfaces (UIs).
+
+            </p>
+        </div>
     </div>
 </div>
