--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="img/nodejs.png" class="skill-img" alt="">
             <div class="skill-level">90%</div>
             <h1 class="skill-name">NODE JS</h1>
-            <p class="skill-info">Its component-based architecture, declarative syntax, and efficient rendering</p>
+            <p class="skill-info">Node.js is a runtime environment that allows you to execute JavaScript code outside of a web browser, typically on the server side.</p>
         </div>
         <div class="skill-card">
             <img src="img/express-js.png" class="skill-img" alt="">
